# Copyright Google Inc. All Rights Reserved.
#
# Use of this source code is governed by an MIT-style license that can be
# found in the LICENSE file at https://angular.io/license
# @external_begin
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "package_json_release_filter.jq",
])

js_binary(
    name = "ng_cli_schema_bin",
    entry_point = "ng_cli_schema_generator.js",
)

js_run_binary(
    name = "ng_cli_schema",
    tool = "ng_cli_schema_bin",
)

js_binary(
    name = "quicktype_runner_bin",
    data = ["//:node_modules/quicktype-core"],
    entry_point = "quicktype_runner.js",
)

js_run_binary(
    name = "quicktype_runner",
    tool = "quicktype_runner_bin",
)
# @external_end
